export const snapshot = {};

snapshot[`object 1`] = `
{
  additionalProperties: false,
  properties: {
    a: {
      type: "boolean",
    },
    b: {
      type: "number",
    },
    c: {
      type: "string",
    },
  },
  required: [
    "a",
    "b",
    "c",
  ],
  type: "object",
}
`;

snapshot[`object 2`] = `
{
  additionalProperties: false,
  description: "One.",
  properties: {
    a: {
      type: "boolean",
    },
    b: {
      type: "number",
    },
    c: {
      type: "string",
    },
  },
  required: [
    "a",
    "b",
    "c",
  ],
  type: "object",
}
`;

snapshot[`object 3`] = `
{
  additionalProperties: false,
  description: "One. Two.",
  properties: {
    a: {
      type: "boolean",
    },
    b: {
      type: "number",
    },
    c: {
      type: "string",
    },
  },
  required: [
    "a",
    "b",
    "c",
  ],
  type: "object",
}
`;
